--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./fontawesome-free-6.1.1-web/css/all.css" />
     <link rel="stylesheet" href="./css/main.css" />
     <script src="./node_modules/tw-elements/dist/js/index.min.js"></script>
@@ -62,7 +68,7 @@
     </nav>
 
     <!-- hero -->
-    <section id="hero" class="relative z-20">
+    <!-- <section id="hero" class="relative z-20">
       <div
         id="hero-container"
         class="container  my-6 mx-auto border space-x-6 space-y-6 justify-center flex flex-col px-6 py-16 md:flex-row"
@@ -77,11 +83,104 @@
 
           <p class="p-2 ">Scrub | Natural oil</p>
         </div>
-        <!-- <div class="min-w-lg">
+         <div class="min-w-lg">
           <img src="./icons8-team-y2T5hT7pWx4-unsplash_1.jpg" alt="" />
         </div>
       </div> -->
-    </section>
+    <!-- </section> -->
+
+    <!-- slider -->
+    <div class="container mx-auto border">
+      <div
+        id="carouselExampleIndicators"
+        class="carousel slide relative"
+        data-bs-ride="carousel"
+      >
+        <div
+          class="carousel-indicators absolute right-0 bottom-0 left-0 flex justify-center p-0 mb-4"
+        >
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+        </div>
+        <div class="carousel-inner relative w-full overflow-hidden">
+          <div class="carousel-item relative active float-left w-full">
+            <img
+              src="./jernej-graj-rlNibgIqi4o-unsplash.jpg"
+              class="w-full md:h-96"
+              alt="Wild Landscape"
+            />
+            <div
+              id="hero-1"
+              class="absolute bottom-1/2 left-14 flex flex-col rounded-md justify-center md:space-y-8 text-center text-white"
+            >
+              <h2 id="text-shadow" class="font-bold text-3xl">
+                Skin Care Products
+              </h2>
+
+              <p id="lead-bg" class="mt-3 p-2">Scrub | Natural oil</p>
+            </div>
+          </div>
+          <div class="relative carousel-item float-left w-full">
+            <img
+              src="./terricks-noah-8RvvJu0Tg9I-unsplash.jpg"
+              class="md:hidden contain md:h-96"
+              alt="Camera"
+            />
+            <img
+              src="./terricks-noah-8RvvJu0Tg9I-unsplash-removebg-preview.png"
+              class="hidden md:block contain md:h-96"
+              alt="Camera"
+            />
+            <div
+              id="hero-1"
+              class="absolute bottom-1/2 left-14 flex flex-col rounded-md justify-center md:space-y-8 text-center text-white"
+            >
+              <h2 id="text-shadow" class="font-bold text-3xl">
+                African Fabrics that make you look good
+              </h2>
+
+              <p id="lead-bg" class="mt-3 p-2">Ankara | Nigerian Patterns</p>
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev absolute top-0 bottom-0 flex items-center justify-center p-0 text-center border-0 hover:outline-none hover:no-underline focus:outline-none focus:no-underline left-0"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev"
+        >
+          <span
+            class="carousel-control-prev-icon inline-block bg-no-repeat"
+            aria-hidden="true"
+          ></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next absolute top-0 bottom-0 flex items-center justify-center p-0 text-center border-0 hover:outline-none hover:no-underline focus:outline-none focus:no-underline right-0"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next"
+        >
+          <span
+            class="carousel-control-next-icon inline-block bg-no-repeat"
+            aria-hidden="true"
+          ></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
 
     <!-- Gallery -->
     <section id="gallery">
@@ -274,7 +373,7 @@
         class="container flex flex-wrap md:justify-around md:space-x-6 space-y-8 md:space-y-0 text-gray-200 mx-auto px-6 py-16"
       >
         <!-- about us -->
-        <div id="about" class="max-w-sm border">
+        <div id="about" class="max-w-sm">
           <h3 class="mb-3">HEMPEARL VENTURES</h3>
           <p class="text-left">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
@@ -283,7 +382,7 @@
         </div>
 
         <!-- list items -->
-        <div class="min-w-sm shrink-0 border">
+        <div class="min-w-sm shrink-0">
           <h4 class="text-left mb-3">QUICK LINKS</h4>
           <a href="#" class="mb-3 cursor-pointer block">Our Products</a>
           <a href="#" class="mb-3 cursor-pointer block">Home</a>
@@ -292,7 +391,7 @@
         </div>
 
         <!-- socials -->
-        <div class="flex flex-col justify-between max-w-sm space-y-4 border">
+        <div class="flex flex-col justify-between max-w-sm space-y-4">
           <!-- links -->
           <div class="space-x-3">
             <span class="text-2xl cursor-pointer"
