--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="./fontawesome-free-6.1.1-web/css/all.css" />
     <link rel="stylesheet" href="./css/main.css" />
-    <script src="./node_modules/tw-elements/dist/js/index.min.js"></script>
+    <script src="./js/index.min.js"></script>
   </head>
   <body>
     <!-- header -->
